--- a/html-css/exercicios/ex022/fundo006.html
+++ b/html-css/exercicios/ex022/fundo006.html
@@ -3,20 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de Tela</title>
     <style>
          body {
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
             height: 100vh;
+            background: black url(imagens/wallpaper002.jpg) center center/cover no-repeat fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             text-align: justify;
@@ -28,6 +24,16 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam ut, asperiores similique magni facilis nobis? Ad iure iusto quae minima accusantium earum temporibus, possimus nihil quia repellat, tempore corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta magni perspiciatis assumenda sint dolores fugiat autem iure aspernatur, earum ad! Nesciunt quasi odit repellat laudantium est nulla autem distinctio a? Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus consequuntur maxime deserunt aperiam omnis veniam dolores at quae sed eligendi vitae animi recusandae excepturi, ullam corporis exercitationem numquam maiores pariatur?</p>
     </main>
 </body>
