--- a/html-css/exercicios/ex023/tabela002.html
+++ b/html-css/exercicios/ex023/tabela002.html
@@ -34,7 +34,7 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <!--
-    ANATOMIA PARA TABELAS GRANDER
+    ANATOMIA PARA TABELAS GRANDES
     TABLE
         THEAD
             TR, TD, TH
