caption, col, rol

--- a/html-css/exercicios/ex023/tabela002.html
+++ b/html-css/exercicios/ex023/tabela002.html
@@ -21,12 +21,19 @@
         }
 
        thead, tfoot {
-          background-color: gray;
+          background-color: rgba(0, 0, 0, 0.839);
           color: white;
         }
 
         td.num {
             text-align: right;
+        }
+
+        caption {
+            font-size: 1.3em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
         
     </style>
@@ -45,10 +52,11 @@
     -->
 
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -163,7 +171,7 @@
          </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>215.058.931</strong></td>
             </tr>
         </tfoot>
