--- a/html-css/exercicios/Desafio-14-Tabela/index.html
+++ b/html-css/exercicios/Desafio-14-Tabela/index.html
@@ -11,11 +11,13 @@
         table {
             border-collapse: collapse;
             font-family: Arial, Helvetica, sans-serif; 
+            width: 550px;
         }
 
         td, th {
             border: 1px solid black;
             padding: 5px;
+            text-align: center;
         }
 
         thead {
@@ -23,7 +25,7 @@
             color: white;
         }
 
-        thead.extra {
+        thead.extra th {
             text-align: left; 
         }
 
