--- a/html-css/exercicios/ex023/tabela005.html
+++ b/html-css/exercicios/ex023/tabela005.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício de Tabela</title>
+
+    <style>
+          table {
+            text-align: left; 
+        }
+        
+    </style>
 </head>
 <body>
     <h1>Exercício de Tabela</h1>
@@ -11,7 +18,16 @@
     <table>
         <caption>Cadastro</caption>
         <tr>
-            <th>Nome</th>
+            <th scope="col">Nome</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Idade</th>
+            <th scope="col">Profissão</th>
+        </tr>
+        <tr>
+            <td>Ana Maria</td>
+            <td>F</td>
+            <td>25</td>
+            <td>Jornalista</td>
         </tr>
     </table>
 </body>
