pequenas mudanças de responsividade

--- a/html-css/exercicios/ex024/paginas-extras/pagina002.html
+++ b/html-css/exercicios/ex024/paginas-extras/pagina002.html
@@ -20,5 +20,11 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique impedit amet tempora adipisci temporibus perspiciatis, delectus sint. Perferendis quidem molestiae harum assumenda atque, commodi veritatis temporibus impedit architecto similique laborum.</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat dolore quod non itaque nihil, vel similique omnis labore! Quis, soluta. Distinctio laudantium officiis molestias aliquid. Corporis exercitationem eaque natus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat dolore quod non itaque nihil, vel similique omnis labore! Quis, soluta. Distinctio laudantium officiis molestias aliquid. Corporis exercitationem eaque natus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt fugiat dolore quod non itaque nihil, vel similique omnis labore! Quis, soluta. Distinctio laudantium officiis molestias aliquid. Corporis exercitationem eaque natus.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et perspiciatis esse hic iure laudantium ipsam modi autem recusandae cumque voluptatem consequuntur ullam sed eaque explicabo maxime illo alias, atque velit.</p>
 </body>
 </html>
