--- a/html-css/exercicios/ex024/paginas-extras/pagina003.html
+++ b/html-css/exercicios/ex024/paginas-extras/pagina003.html
@@ -8,6 +8,8 @@
         body { 
             font-family: Arial, Helvetica, sans-serif;
             background-color: blue;
+            font-size: 0.3em;
+            text-align: center;
         }
 
         img {
