--- a/html-css/exercicios/ex024/iframe003.html
+++ b/html-css/exercicios/ex024/iframe003.html
@@ -32,7 +32,7 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A optio maiores quibusdam! Laborum voluptatem, iure praesentium, laudantium facilis ullam error voluptates, possimus officia ea explicabo deleniti porro ex quo illo!</p>
 
-    <iframe id="tela" name="frame" src="" frameborder="1"> 
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A optio maiores quibusdam! Laborum voluptatem, iure praesentium, laudantium facilis ullam error voluptates, possimus officia ea explicabo deleniti porro ex quo illo!</p><img src='fotinhas/nirvana.png'>"frameborder="1"> 
         <p>Infelizmente seu navegador não é compativel</p>
     </iframe>
 
