--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/index.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="imagens/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Tela Smartphone</title>
 </head>
 <body>
-    <h1>Remy Oliveira</h1>
+    <main>
+        <section id="telefone">
+
+        </section>
+
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
