--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/index.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="imagens/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Tela Smartphone</title>
 </head>
@@ -14,7 +14,12 @@
         </section>
 
         <section id="redes-sociais">
-
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a><br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
         </section>
     </main>
 </body>
