atualização do exercício com as minhas próprias fotos

--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/github.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="">
+    <img src="imagens/git-hub-print.png" alt="">
     <a href="https://github.com/Remy-Oliveira" target="_blank">ACESSE</a>
 </body>
 </html>
