--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/facebook.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/facebook.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="">
-    <a href="https://www.facebook.com/officialchucknorrispage/?locale=pt_BR" target="_blank">ACESSE</a>
+    <img src="imagens/robocop - facebook.png" alt="">
+    <a href="https://www.facebook.com/RoboCop/?locale=pt_BR" target="_blank">ACESSE</a>
 </body>
 </html>
