--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/instagram.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="">
+    <img src="imagens/instagran-print.png" alt="">
     <a href="https://www.instagram.com/officialdaveweckl/" target="_blank">ACESSE</a>
 </body>
 </html>
