--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/twitter.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/twitter.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens\tela-twitter.jpg" alt="">
-    <a href="https://x.com/elonmusk" target="_blank">ACESSE</a>
+    <img src="imagens/twiwwter-chuckl.png" alt="">
+    <a href="https://x.com/chucknorris" target="_blank">ACESSE</a>
 </body>
 </html>
