--- a/html-css/exercicios/Desafio - TELA SMARTPHONE/youtube.html
+++ b/html-css/exercicios/Desafio - TELA SMARTPHONE/youtube.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="">
+    <img src="imagens/youtube_01.png" alt="">
     <a href="https://www.youtube.com/@remyoliveira3364" target="_blank">ACESSE</a>
 </body>
 </html>
