--- a/html-css/exercicios/ex025/form002.html
+++ b/html-css/exercicios/ex025/form002.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <h1>Teste de Formulário</h1>
-    <form action="" method="post" autocomplete="off">
+    <form action="" method="post">
         <p>
             <label for="iusu">Usuário: </label>
-            <input type="text" name="usu" id="iusu" required minlength="5" maxlength="15" placeholder="max 15 letras">
+            <input type="text" name="usu" id="iusu" required minlength="5" maxlength="15" placeholder="max 15 letras" autocomplete="username">
         </p>
 
         <p>
             <label for="isenha">Senha: </label>
-            <input type="password" name="senha" id="isenha" required minlength="8" size="30" placeholder="min 8 letras">
+            <input type="password" name="senha" id="isenha" required minlength="8" size="30" placeholder="min 8 letras" autocomplete="current-password">
         </p>
 
         <p>
