--- a/html-css/exercicios/ex026/mq005/index.html
+++ b/html-css/exercicios/ex026/mq005/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
-    <head>
+    <header>
         <h1>Meu Site</h1>
+        
+        <span id="burguer" class="material-symbols-outlined">menu</span>
         
         <menu>
             <ul>
@@ -19,7 +23,7 @@
                 <li><a href="#">Opção 5</a></li>
             </ul>
         </menu>
-    </head>
+    </header>
 
     <main>
         <article>
