--- a/html-css/exercicios/ex026/mq005/index.html
+++ b/html-css/exercicios/ex026/mq005/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
@@ -45,13 +46,13 @@
     </main>
 
     <script>
-        function clickMenu() { 
-            if(itens.style.display == 'block') { 
-                itens.style.display = 'none' 
-            } else {
-                itens.style.display = 'block'
-            }
+      function clickMenu() {
+        if (itens.style.display == 'block') {
+            itens.style.display = 'none';
+        } else {
+            itens.style.display = 'block';
         }
+    }
     </script>
 
 </body>
