created style and update index

--- a/html-css/exercicios/projeto-04/index.html
+++ b/html-css/exercicios/projeto-04/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela Login</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <main>
+        <section id="login">
+            <div id="imagem">
+                foto
+            </div>
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer as configrurações no seu ambiente.</p>
+                <form action="" method="post">
+
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
