--- a/html-css/exercicios/projeto-04/index.html
+++ b/html-css/exercicios/projeto-04/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -15,8 +16,22 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer as configrurações no seu ambiente.</p>
-                <form action="" method="post">
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer as configurações no seu ambiente.</p>
+                <form action="" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-icons md-18">person</span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-meail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-icons md-18">vpn_key</span>
+                        <input type="password" name="senha" id="senha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div>
+
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html"> Esqueci a senha <span class="material-icons md-18">mail</span></a>
 
                 </form>
             </div>
