--- a/html-css/exercicios/projeto-04/index.html
+++ b/html-css/exercicios/projeto-04/index.html
@@ -26,7 +26,7 @@
                     <div class="campo">
                         <span class="material-icons md-18">person</span>
                         
-                        <input type="email" name="login" id="ilogin" placeholder="Seu e-meail" autocomplete="email" required maxlength="30">
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         
                         <label for="ilogin"></label>
                     </div>
