--- a/html-css/exercicios/ex027/flex003/index.html
+++ b/html-css/exercicios/ex027/flex003/index.html
@@ -9,13 +9,14 @@
             background-color: lightsalmon;
             display: flex;
             flex-flow: row wrap-reverse;
+            justify-content: space-between;
         }
 
         div.item { 
             background-color: lightskyblue; 
             border: 1px solid black;
             text-align: center;
-            flex: auto;
+            
         }
 
     </style>
