--- a/html-css/exercicios/ex027/flex004/index.html
+++ b/html-css/exercicios/ex027/flex004/index.html
@@ -8,9 +8,10 @@
         div.conteiner {
             background-color: lightsalmon;
             display: flex;
-            flex-flow: row wrap;
-            justify-content: space-evenly;
-            
+            flex-flow: row nowrap;
+            justify-content: space-around;
+            height: 300px;
+            align-items: end;
         }
 
         div.item { 
@@ -24,13 +25,13 @@
 </head>
 <body>
     <div class="conteiner">
-        <div class="item">Exemplo de Bloco A</div>
-        <div class="item">Exemplo de Bloco B</div>
-        <div class="item">Exemplo de Bloco C</div>
-        <div class="item">Exemplo de Bloco D</div>
-        <div class="item">Exemplo de Bloco E</div>
-        <div class="item">Exemplo de Bloco F</div>
-        <div class="item">Exemplo de Bloco G</div>
+        <div class="item">A</div>
+        <div class="item">B</div>
+        <div class="item">C</div>
+        <div class="item">D</div>
+        <div class="item">E</div>
+        <div class="item">F</div>
+        <div class="item">G</div>
     </div>
 </body>
 </html>
