--- a/html-css/exercicios/ex027/flex012/index.html
+++ b/html-css/exercicios/ex027/flex012/index.html
@@ -25,6 +25,8 @@
         
         #cxC { flex: initial; } /* shorthand --> flex grow, shrink and basis -> "0 1 auto" -> Default value  */ 
 
+        /* flex: 3 -> flex valor de group */ 
+
     </style>
 </head>
 <body>
