--- a/javascript/alert-confirm-prompt.html
+++ b/javascript/alert-confirm-prompt.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAVASCRIPT</title>
-    <style>   
-        body { background-color: rgb(147, 0, 0); }
-        h1, p { color: aliceblue; }
-    </style>
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
-    <p>Já me livrei da maldição!</p>
-
     <script>
-        alert('Minha primeira mensagem') /* Seria o print? */
-        confirm('Está gostando de JS?') /* Pede para o usuário confimar */
-        prompt('Qual é o seu nome?') /* Pede para o usuário digitar */
+        var n1 = Number(prompt('Digite um número'))
+        var n2 = Number(prompt('Digite outro número'))
+        var soma = n1 + n2
+        alert('n1 + n2 é ' + soma)
     </script>
 </body>
 </html>
