--- a/javascript/alert-confirm-prompt.html
+++ b/javascript/alert-confirm-prompt.html
@@ -7,18 +7,19 @@
 </head>
 <body>
     <script>
-        var n1 = Number(prompt('Digite um número'))
+        
+        var n1 = Number(prompt('Digite um número'))            // input
         var n2 = Number(prompt('Digite outro número'))
         var soma = n1 + n2
-        alert('n1 + n2 é ' + soma)
+        
+        alert('n1 + n2 é ' + soma)                              // exibe alerta
         alert('n1 + n2 é ' + String(soma)) // Convertendo numero para String
 
-        /* 
         var nome = 'Remy'
         var idade = 33
         var nota = 9.5
-        `O aluno ${nome} com ${idade} anos, tirou a nota ${nota}. Que bom!`
-        */
+
+        alert(`O aluno ${nome} com ${idade} anos, tirou a nota ${nota}. Que bom!`);    // interpolação de variáveis
     </script>
 </body>
 
