--- a/javascript/teste.html
+++ b/javascript/teste.html
@@ -21,7 +21,9 @@
         document.write(`Sua diária é ${salario_br.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'})}`) // formato monetário
         */
 
-        document.write(4 % 2 == 0 ? 5 : 9)
+        document.write(4 % 2 == 0 ? 5 : 9)  // o resto da divisão do número 4 por 2 é igual a zero? se sim escreva 5 se não escreva 9 operação ternária
+
+        document.write(15 >= 18 ? true : false) // 15 é maior ou igual a 18? se sim escreva true se não false
     </script>
     
 </body>
