--- a/javascript/condicionais copy.html
+++ b/javascript/condicionais copy.html
@@ -23,9 +23,9 @@
     <script>
         function verificar() {
             if (document.getElementById('entrada').value == "Brasil") { // Não esqueça de colocar o .value para comparar o valor do elemento
-                document.getElementById('entrada_div').innerText = 'Você é brasileiro'
+                document.getElementById('entrada_div').innerText = 'Você é brasileiro' // Mudo o testo da div
             } else {
-                document.querySelector('#entrada_div').innerText = 'Você é gringo!'
+                document.querySelector('#entrada_div').innerText = 'Você é gringo!' // Mudo o testo da div
             }
         }
     </script>
