--- a/javascript/exercicio_01/exercicio.html
+++ b/javascript/exercicio_01/exercicio.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="carregar()">
+
+<body onload="carregar()"> <!--Essa função é disparada quando todo o conteúdo(imagens...) do body for carregada-->
     <header>
         <h1>Hora do Dia</h1>
     </header>
     <section>
         <div id="msg">
-            Testando
+            <p>mude esse texto</p>
         </div>
-        <div id="foto">
-            <img id="imagem" src="imagens/MANHA.png" alt="">
-        </div>
+        <div><img id="imagem" src="imagens/MANHA.png" alt="fotinha"></div>
     </section>
     <footer>
         <p>&copy; Remy Oliveira</p>
     </footer>
     <script src="meu_primeiro_JS.js"></script> <!--Cria uma pasta com extensão em .js.Semelhante ao link:css...-->
 </body>
+
 </html>
