--- a/javascript/exercicio_03/index.html
+++ b/javascript/exercicio_03/index.html
@@ -5,28 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vamos contar</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <h1>Vamos Contar</h1>
-        <section>
-            <div id="inicio_div">
-                <p id="p_01">Inicio:
-                    <input type="number" name="texto" id="inicio">
-                    Fim:
-                    <input type="number" name="texto" id="fim">
-                    Passo:
-                    <input type="number" name="passo" id="passo">
-                </p>
-            </div>
-            <input type="button" value="verificar" id="botaozinho" onclick="chama_java()">
-            <div id="resultado_div">
-                <p id="p_02">Contando: </p>
-            </div>
-        </section>
-        <footer>&copy;Remy Oliveira</footer>
     </header>
+    <section>
+        <div id="inicio_div">
+            <p id="p_01">Inicio:
+                <input type="number" name="texto" id="inicio">
+                Fim:
+                <input type="number" name="texto" id="fim">
+                Passo:
+                <input type="number" name="passo" id="passo">
+            </p>
+        </div>
+        <input type="button" value="verificar" id="botaozinho" onclick="chama_java()">
+        <div id="resultado_div">
+            <p id="p_02">Contando: </p>
+        </div>
+    </section>
+    <footer>&copy;Remy Oliveira</footer>
     <script src="js_03.js"></script>
 </body>
 
