--- a/javascript/exercicio_03/index.html
+++ b/javascript/exercicio_03/index.html
@@ -14,11 +14,11 @@
     </header>
     <section>
         <div id="inicio_div">
-            <p id="p_01">Inicio:
+            <p id="p_01">Inicio
                 <input type="number" name="texto" id="inicio">
-                Fim:
+                Fim
                 <input type="number" name="texto" id="fim">
-                Passo:
+                Passo
                 <input type="number" name="passo" id="passo">
             </p>
         </div>
